--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        <div class="banner-content">
+            <h1 class="banner-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, rerum?</h1>
+            <p class="banner-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam fuga iusto adipisci, aspernatur modi laudantium cumque at vero totam? Repellat fuga nostrum perferendis maxime numquam libero? Necessitatibus, tempore nobis.</p>
+            <button>Shop Now</button>
+        </div>
+        <img class="banner-flower" src="Flower Asset/pngwing 10.png" alt="">
     </header>
 
     <main>
@@ -16,7 +21,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
 </html>
