Added service & hot deal section

--- a/index.html
+++ b/index.html
@@ -4,20 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Flower Shop</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;800& display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
         <div class="banner-content">
-            <h1 class="banner-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, rerum?</h1>
-            <p class="banner-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus quibusdam fuga iusto adipisci, aspernatur modi laudantium cumque at vero totam? Repellat fuga nostrum perferendis maxime numquam libero? Necessitatibus, tempore nobis.</p>
-            <button>Shop Now</button>
+            <h1 class="banner-title">Let's make <br>beautiful flowers a <br>part of your life.</h1>
+            <p class="description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout. The point of using Lorem Ipsum is <br>that it has a more-or-less normal distribution of letters.</p>
+            <button class="btn">Shop Now</button>
         </div>
-        <img class="banner-flower" src="Flower Asset/pngwing 10.png" alt="">
+        <img class="banner-flower" src="./Flower Asset/pngwing 10.png" alt="">
     </header>
 
     <main>
-
+        <section class="featured">
+            <h1 class="title">Our Featured Flowers</h1>
+            <p class="description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+            <div class="featured-flower">
+                <div class="flower-box1 box">
+                    <img class="box1-image" src="./Flower Asset/pngwing 6.png" alt="">
+                    <p class="box-title">Pink Flower Tree</p>
+                </div>
+                <div class="flower-box2 box">
+                    <img class="box2-image" src="./Flower Asset/pngwing 5.png" alt="">
+                    <p class="box-title">Pink Flower Tree</p>
+                </div>
+                <div class="flower-box3 box">
+                    <img class="box3-image" src="./Flower Asset/pngwing 7.png" alt="">
+                    <p class="box-title">Pink Flower Tree</p>
+                </div>
+            </div>
+        </section>
+        <!-- service section -->
+        <section class="service-container">
+            <div class="service">
+                <img src="./Flower Asset/Group 57.png" alt="">
+                <p>Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div class="service">
+                <img src="./Flower Asset/Group 58.png" alt="">
+                <p>Fresh Flowers. Local Growers.</p>
+            </div>
+            <div class="service">
+                <img src="./Flower Asset/Group 59.png" alt="">
+                <p>24/7 Free Support.</p>
+            </div>
+        </section>
+        <section>
+            <div class="hot-deal">
+                <div class="deal-content">
+                    <h1 class="title">Hot Deal ! Sale Up To 25% <span>Off</span></h1>
+                    <p class="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <button class="btn">Sign Up</button>
+                </div>
+                <img src="./Flower Asset/pngwing 8.png" alt="">
+            </div>
+        </section>
     </main>
 
     <footer>
