Added offer and instagram section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!-- header section -->
     <header class="header">
         <div class="banner-content">
             <h1 class="banner-title">Let's make <br>beautiful flowers a <br>part of your life.</h1>
@@ -20,6 +21,7 @@
     </header>
 
     <main>
+        <!-- featured section -->
         <section class="featured">
             <h1 class="title">Our Featured Flowers</h1>
             <p class="description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
@@ -53,15 +55,33 @@
                 <p>24/7 Free Support.</p>
             </div>
         </section>
+        <!-- hot deal section -->
         <section>
             <div class="hot-deal">
                 <div class="deal-content">
-                    <h1 class="title">Hot Deal ! Sale Up To 25% <span>Off</span></h1>
-                    <p class="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <h1 class="title">Hot Deal ! Sale Up To 25% <span class="off">Off</span></h1>
+                    <p class="description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
                     <button class="btn">Sign Up</button>
                 </div>
                 <img src="./Flower Asset/pngwing 8.png" alt="">
             </div>
+        </section>
+        <!-- instragram section -->
+        <section class="insta-content">
+            <div class="instagram">
+                <div class="title">Instagram</div>
+                <div class="description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</div>
+                <div class="instagram-img">
+                    <img class="inta-image" src="./Flower Asset/Flower 01.png" alt="">
+                    <img class="inta-image" src="./Flower Asset/Rectangle 4.png" alt="">
+                    <img class="inta-image" src="./Flower Asset/Rectangle 5.png" alt="">
+                    <img class="inta-image" src="./Flower Asset/Rectangle 6.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="email">
+
         </section>
     </main>
 
