--- a/index.html
+++ b/index.html
@@ -1,92 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Flower Shop</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;800& display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<!-- header section -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,300;1,700&family=Open+Sans:ital,wght@0,400;0,600;0,700;0,800;1,600;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- header section -->
     <header class="header">
-        <div class="banner-content">
-            <h1 class="banner-title">Let's make <br>beautiful flowers a <br>part of your life.</h1>
-            <p class="description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout. The point of using Lorem Ipsum is <br>that it has a more-or-less normal distribution of letters.</p>
-            <button class="btn">Shop Now</button>
-        </div>
-        <img class="banner-flower" src="./Flower Asset/pngwing 10.png" alt="">
+      <div class="banner-content">
+        <h1 class="banner-title">
+          Let's make <br />beautiful flowers a <br />part of your life.
+        </h1>
+        <p class="description">
+          It is a long established fact that a reader will be distracted by the
+          readable <br />content of a page when looking at its layout. The point
+          of using Lorem Ipsum is <br />that it has a more-or-less normal
+          distribution of letters.
+        </p>
+        <button class="btn">Shop Now</button>
+      </div>
+      <img class="banner-flower" src="./Flower Asset/pngwing 10.png" alt="" />
     </header>
 
     <main>
-        <!-- featured section -->
-        <section class="featured">
-            <h1 class="title">Our Featured Flowers</h1>
-            <p class="description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
-            <div class="featured-flower">
-                <div class="flower-box1 box">
-                    <img class="box1-image" src="./Flower Asset/pngwing 6.png" alt="">
-                    <p class="box-title">Pink Flower Tree</p>
-                </div>
-                <div class="flower-box2 box">
-                    <img class="box2-image" src="./Flower Asset/pngwing 5.png" alt="">
-                    <p class="box-title">Pink Flower Tree</p>
-                </div>
-                <div class="flower-box3 box">
-                    <img class="box3-image" src="./Flower Asset/pngwing 7.png" alt="">
-                    <p class="box-title">Pink Flower Tree</p>
-                </div>
-            </div>
-        </section>
-        <!-- service section -->
-        <section class="service-container">
-            <div class="service">
-                <img src="./Flower Asset/Group 57.png" alt="">
-                <p>Same Day Delivery. Click & Collect.</p>
-            </div>
-            <div class="service">
-                <img src="./Flower Asset/Group 58.png" alt="">
-                <p>Fresh Flowers. Local Growers.</p>
-            </div>
-            <div class="service">
-                <img src="./Flower Asset/Group 59.png" alt="">
-                <p>24/7 Free Support.</p>
-            </div>
-        </section>
-        <!-- hot deal section -->
-        <section>
-            <div class="hot-deal">
-                <div class="deal-content">
-                    <h1 class="title">Hot Deal ! Sale Up To 25% <span class="off">Off</span></h1>
-                    <p class="description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
-                    <button class="btn">Sign Up</button>
-                </div>
-                <img src="./Flower Asset/pngwing 8.png" alt="">
-            </div>
-        </section>
-        <!-- instragram section -->
-        <section class="insta-content">
-            <div class="instagram">
-                <div class="title">Instagram</div>
-                <div class="description">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</div>
-                <div class="instagram-img">
-                    <img class="inta-image" src="./Flower Asset/Flower 01.png" alt="">
-                    <img class="inta-image" src="./Flower Asset/Rectangle 4.png" alt="">
-                    <img class="inta-image" src="./Flower Asset/Rectangle 5.png" alt="">
-                    <img class="inta-image" src="./Flower Asset/Rectangle 6.png" alt="">
-                </div>
-            </div>
-        </section>
+      <!-- featured section -->
+      <section class="featured">
+        <h1 class="title">Our Featured Flowers</h1>
+        <p class="description">
+          It is a long established fact that a reader will be distracted by the
+          readable <br />content of a page when looking at its layout.
+        </p>
+        <div class="featured-flower">
+          <div class="flower-box1 box">
+            <img class="box1-image" src="./Flower Asset/pngwing 6.png" alt="" />
+            <p class="box-title">Pink Flower Tree</p>
+          </div>
+          <div class="flower-box2 box">
+            <img class="box2-image" src="./Flower Asset/pngwing 5.png" alt="" />
+            <p class="box-title">Pink Flower Tree</p>
+          </div>
+          <div class="flower-box3 box">
+            <img class="box3-image" src="./Flower Asset/pngwing 7.png" alt="" />
+            <p class="box-title">Pink Flower Tree</p>
+          </div>
+        </div>
+      </section>
 
-        <section class="email">
+      <!-- service section -->
+      <section class="service-container">
+        <div class="service">
+          <img src="./Flower Asset/Group 57.png" alt="" />
+          <p>Same Day Delivery. Click & Collect.</p>
+        </div>
+        <div class="service">
+          <img src="./Flower Asset/Group 58.png" alt="" />
+          <p>Fresh Flowers. Local Growers.</p>
+        </div>
+        <div class="service">
+          <img src="./Flower Asset/Group 59.png" alt="" />
+          <p>24/7 Free Support.</p>
+        </div>
+      </section>
 
-        </section>
+      <!-- hot deal section -->
+      <section>
+        <div class="hot-deal">
+          <div class="deal-content">
+            <h1 class="title">
+              Hot Deal ! Sale Up To 25% <span class="off">Off</span>
+            </h1>
+            <p class="description">
+              It is a long established fact that a reader will be distracted by
+              the readable <br />content of a page when looking at its layout.
+            </p>
+            <button class="btn">Sign Up</button>
+          </div>
+          <img src="./Flower Asset/pngwing 8.png" alt="" />
+        </div>
+      </section>
+
+      <!-- instragram section -->
+      <section class="insta-content">
+        <div class="instagram">
+          <div class="title">Instagram</div>
+          <div class="description">
+            It is a long established fact that a reader will be distracted by
+            the readable <br />content of a page when looking at its layout.
+          </div>
+          <div class="instagram-img">
+            <img class="inta-image" src="./Flower Asset/Flower 01.png" alt="" />
+            <img
+              class="inta-image"
+              src="./Flower Asset/Rectangle 4.png"
+              alt=""
+            />
+            <img
+              class="inta-image"
+              src="./Flower Asset/Rectangle 5.png"
+              alt=""
+            />
+            <img
+              class="inta-image"
+              src="./Flower Asset/Rectangle 6.png"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- latest deal section -->
+      <section class="latest-deals">
+        <h1 class="title">Get The Latest Deals</h1>
+        <p class="description">$30 coupon for first shopping</p>
+        <form class="mail">
+          <input
+            type="email"
+            name=""
+            id="email"
+            placeholder="Enter your email here...."
+          />
+          <button type="submit" class="btn">Subscribe</button>
+        </form>
+      </section>
     </main>
 
-    <footer>
-
+    <!-- footer section -->
+    <footer class="footer">
+      <h1 class="title footer-title"><span class="off">Flower</span>Shop</h1>
+      <p class="description footer-dep">
+        It is a long established fact that a reader will be distracted by the
+        readable <br />content of a page when looking at its layout.
+      </p>
+      <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved.</p>
+      <p class="name">Arafat</p>
     </footer>
-</body>
+  </body>
 </html>
