--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         readable <br />content of a page when looking at its layout.
       </p>
       <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved.</p>
-      <p class="name">Arafat</p>
+      <p class="name">Abu Sayed</p>
     </footer>
   </body>
 </html>
